# rtforth

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  TODO  TODO.md  contributors.txt  core.fs  core.fth  lib.fs
.cargo/: config
benches/: core.rs  rf_benchmark.rs
doc/: compatibility.md  eforth-words.f
doc/bench/: README
doc/bench/c-generated/: Makefile  bubble-sort.c  fib.c  forth2c.h  matrix-mult.c  sieve.c
doc/bench/c-manual/: Makefile  bubble-sort.c  fib.c  matrix-mult.c  sieve.c  stan.c
doc/bench/forth/: Makefile  bubble-sort.fs  fib.fs  matrix-mult.fs  mm-rtcg.fs  repeat.fs  sieve.fs  ssieve-a.frt
doc/issues/: core_words.md  data_structure.md  instruction_set.md  ip0.md  performance.md  refactoring.md  safe.md
doc/optimization/: README.md
doc/optimization/asm/: Cargo.toml
doc/optimization/asm/src/: main.rs
doc/optimization/bytecode/: Cargo.toml
doc/optimization/bytecode/src/: main.rs
doc/optimization/call/: Cargo.toml
doc/optimization/call/src/: main.rs
doc/optimization/new-ip/: Cargo.toml
doc/optimization/new-ip/src/: main.rs
doc/optimization/new-run/: Cargo.toml
doc/optimization/new-run/src/: main.rs
doc/primer/: README.md  SUMMARY.md  book.toml  calculator.md  cam.md  colon.md  control.md  dictionary.md  float.md  installation.md  integer.md  linux_installation.md  logic.md  matrix.md  modbus.md  numeric.md  programming.md  repetition.md  selection.md  stacks.md  style.md  tasking.md  wheel.md  windows_installation.md  wordlist.md
doc/primer/src/: README.md  SUMMARY.md  advanced.md  alignment.md  calculator.md  installation.md  integer.md  repetition.md  selection.md  tasking.md
docs/: 404.html  README.md  calculator.html  cam.md  colon.html  dictionary.html  float.html  index.html  installation.html  integer.html  linux_installation.html  logic.html  matrix.md  mobilewheel.md  print.html  programming.html  repetition.html  search_index.json  searchindex.js  searchindex.json  selection.html  style.html  tasking.html  windows_installation.html
examples/: lib.fs  multitask.rs  multiuser.rs  rf.fs  rf.rs  simple.rs  vm.rs
examples/rf/: Cargo.toml
rtf/: Cargo.toml  README.md  TODO.md
rtf/src/: main.rs  rtf.fs  term.rs
scripts/: bench_fib.sh  bench_repeat.sh  bench_sieve.sh
src/: codespace.rs  core.rs  core.rs.bk  dataspace.rs  env.rs  errors.rs  exception.rs  facility.rs  file_access.rs  float.rs  gui.rs  io.rs  jitmem.rs  lib.rs  loader.rs  main.rs  memory.rs  mock_vm.rs  output.rs  parser.rs  search_order.rs  tools.rs  units.rs  vm.rs  word.rs
src/rf/: rf.rs
tests/: lib.rs
