[package]

name = "rtforth"
version = "0.10.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
keywords = ["forth", "real-time"]
description = "Forth implemented in Rust for realtime application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chengchangwu/rtforth.git"
autoexamples = false
exclude = ["docs"]

[lib]
name = "rtforth"
path = "src/lib.rs"

[[example]]
name = "rf"
path = "examples/rf.rs"

[[example]]
name = "multitask"
path = "examples/multitask.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[dependencies]
approx = "~0.3"
libc = "~0.2.54"
page_size = "0.4.2"

[dependencies.hibitset]
version = "~0.5.0"
default-features = false    # do not use rayon

[dev-dependencies]
rustyline = "^4"
getopts = "~0.2.21"
time = "~0.1"
criterion = "0.2"

[profile.release]
debug = true

[[bench]]
name = "rf_benchmark"
harness = false
