[package]

name = "rtforth"
version = "0.6.6"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
keywords = ["forth", "real-time"]
description = "Forth implemented in Rust for realtime application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chengchangwu/rtforth.git"
autoexamples = false

[workspace]
members = ["rtf"]

[lib]
name = "rtforth"
path = "src/lib.rs"

[[example]]
name = "multitask"
path = "examples/multitask.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[dependencies]
uom = "0.33.0"
approx = "0.5"
libc = "^0.2.48"
page_size = "0.4.2"

[dependencies.hibitset]
version = "0.6.3"
default-features = false    # do not use rayon

[profile.release]
debug = true
