[package]

name = "rtforth"
version = "0.6.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
keywords = ["forth", "real-time"]
description = "Forth implemented in Rust for realtime application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chengchangwu/rtforth.git"
autoexamples = false

[lib]
name = "rtforth"
path = "src/lib.rs"

[[example]]
name = "rf"
path = "examples/rf.rs"

[[example]]
name = "multitask"
path = "examples/multitask.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[dependencies]
uom = "~0.31.0"
approx = "~0.3"
libc = "0.2"
page_size = "0.4.2"
region = "3.0.0"

[dependencies.hibitset]
version = "~0.5.0"
default-features = false    # do not use rayon

[dev-dependencies]
rustyline = "^4"
getopts = "~0.2.21"
time = "~0.1"
lazy_static = "~1.3.0"
unicode-width = "~0.1.5"

[profile.release]
debug = true
