[package]

name = "rtf"
version = "0.6.3"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
keywords = ["forth", "real-time"]
description = "Forth implemented in Rust for realtime application"
license = "MIT OR Apache-2.0"

[dependencies]
rtforth = "0.6.3"
crossterm = "0.25"
unicode-width = "0.1"
getopts = "0.2.21"
lazy_static = "1.4.0"

[profile.release]
debug = true
